--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,33 @@
 
-html,
+/* html,
 body {
-    height: 100%;
-    margin: 0;
+       margin: 0;
     padding: 0;
-}
+    background: #fff;
+    background-image: url('/assets/start.jpg');
 
-#map {
+} */
+
+body, html {
     height: 100%;
-    border:1px solid royalblue;
-    
 }
 
-.map-container {
-    height: calc(100vh - 110px);
-    left: 42%;
-    position: fixed;
+.bg { 
+    /* The image used */
+    background-image: url('/assets/start.jpg');
+
+    /* Full height */
+    height: 100%; 
+
+    /* Center and scale the image nicely */
+    /* background-position: center; */
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.bg-orange{
+    background: #FF6200;
+    color:white;
 }
 
 .app-container{
@@ -27,12 +39,16 @@ body {
     padding: 6px 10px;
     margin-top: 8px;
     margin-right: 16px;
-    background: #ddd;
     font-size: 17px;
     border: none;
     cursor: pointer;
+    background: #FF6200;
   }
   
   .search-container button:hover {
-    background: #ccc;
+    background: rgba(204, 204, 204, 0.973);
+  }
+
+  .result-section{
+      background: #f5f5f5;
   }
