--- a/src/styles.css
+++ b/src/styles.css
@@ -12,9 +12,13 @@ body, html {
     height: 100%;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 .bg { 
     /* The image used */
-    background-image: url('/assets/start.jpg');
+    /* background-image: url('/assets/start.jpg'); */
 
     /* Full height */
     height: 100%; 
@@ -23,6 +27,7 @@ body, html {
     /* background-position: center; */
     background-repeat: no-repeat;
     background-size: cover;
+    background: #fff;
 }
 
 .bg-orange{
@@ -50,5 +55,9 @@ body, html {
   }
 
   .result-section{
-      background: #f5f5f5;
-  }
+      /* background: #f5f5f5; */
+      background:whitesmoke;
+      margin-bottom: 2%;
+      padding: 20px;
+    }
+
